Remove legacy Terms interfaces